src/test/ui/layout/debug.stderr
error: layout_of(E) = Layout {
           fields: Arbitrary {
               offsets: [
                   Size(0 bytes),
               ],
               memory_index: [
                   0,
               ],
           },
           variants: Multiple {
               tag: Initialized {
                   value: Int(
                       I32,
                       false,
                   ),
                   valid_range: 0..=0,
               },
               tag_encoding: Direct,
               tag_field: 0,
               variants: [
                   Layout {
                       fields: Arbitrary {
                           offsets: [],
                           memory_index: [],
                       },
                       variants: Single {
                           index: 0,
                       },
                       abi: Aggregate {
                           sized: true,
                       },
                       largest_niche: None,
                       align: AbiAndPrefAlign {
                           abi: Align(1 bytes),
                           pref: $PREF_ALIGN,
                       },
                       size: Size(4 bytes),
                   },
                   Layout {
                       fields: Arbitrary {
                           offsets: [
                               Size(4 bytes),
                               Size(4 bytes),
                               Size(8 bytes),
                           ],
                           memory_index: [
                               0,
                               1,
                               2,
                           ],
                       },
                       variants: Single {
                           index: 1,
                       },
                       abi: Uninhabited,
                       largest_niche: None,
                       align: AbiAndPrefAlign {
                           abi: Align(4 bytes),
                           pref: $PREF_ALIGN,
                       },
                       size: Size(12 bytes),
                   },
               ],
           },
           abi: Aggregate {
               sized: true,
           },
           largest_niche: Some(
               Niche {
                   offset: Size(0 bytes),
                   value: Int(
                       I32,
                       false,
                   ),
                   valid_range: 0..=0,
               },
           ),
           align: AbiAndPrefAlign {
               abi: Align(4 bytes),
               pref: $PREF_ALIGN,
           },
           size: Size(12 bytes),
       }
  --> $DIR/debug.rs:6:1
   |
LL | enum E { Foo, Bar(!, i32, i32) }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: layout_of(S) = Layout {
           fields: Arbitrary {
               offsets: [
                   Size(0 bytes),
                   Size(0 bytes),
                   Size(4 bytes),
               ],
               memory_index: [
                   1,
                   0,
                   2,
               ],
           },
           variants: Single {
               index: 0,
           },
           abi: ScalarPair(
               Initialized {
                   value: Int(
                       I32,
                       true,
                   ),
                   valid_range: 0..=4294967295,
               },
               Initialized {
                   value: Int(
                       I32,
                       true,
                   ),
                   valid_range: 0..=4294967295,
               },
           ),
           largest_niche: None,
           align: AbiAndPrefAlign {
               abi: Align(4 bytes),
               pref: $PREF_ALIGN,
           },
           size: Size(8 bytes),
       }
  --> $DIR/debug.rs:9:1
   |
LL | struct S { f1: i32, f2: (), f3: i32 }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: layout_of(U) = Layout {
           fields: Union(
               2,
           ),
           variants: Single {
               index: 0,
           },
           abi: Aggregate {
               sized: true,
           },
           largest_niche: None,
           align: AbiAndPrefAlign {
               abi: Align(4 bytes),
               pref: $PREF_ALIGN,
           },
           size: Size(8 bytes),
       }
  --> $DIR/debug.rs:12:1
   |
LL | union U { f1: (i32, i32), f3: i32 }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: layout_of(std::result::Result<i32, i32>) = Layout {
           fields: Arbitrary {
               offsets: [
                   Size(0 bytes),
               ],
               memory_index: [
                   0,
               ],
           },
           variants: Multiple {
               tag: Initialized {
                   value: Int(
                       I32,
                       false,
                   ),
                   valid_range: 0..=1,
               },
               tag_encoding: Direct,
               tag_field: 0,
               variants: [
                   Layout {
                       fields: Arbitrary {
                           offsets: [
                               Size(4 bytes),
                           ],
                           memory_index: [
                               0,
                           ],
                       },
                       variants: Single {
                           index: 0,
                       },
                       abi: ScalarPair(
                           Initialized {
                               value: Int(
                                   I32,
                                   false,
                               ),
                               valid_range: 0..=1,
                           },
                           Initialized {
                               value: Int(
                                   I32,
                                   true,
                               ),
                               valid_range: 0..=4294967295,
                           },
                       ),
                       largest_niche: None,
                       align: AbiAndPrefAlign {
                           abi: Align(4 bytes),
                           pref: $PREF_ALIGN,
                       },
                       size: Size(8 bytes),
                   },
                   Layout {
                       fields: Arbitrary {
                           offsets: [
                               Size(4 bytes),
                           ],
                           memory_index: [
                               0,
                           ],
                       },
                       variants: Single {
                           index: 1,
                       },
                       abi: ScalarPair(
                           Initialized {
                               value: Int(
                                   I32,
                                   false,
                               ),
                               valid_range: 0..=1,
                           },
                           Initialized {
                               value: Int(
                                   I32,
                                   true,
                               ),
                               valid_range: 0..=4294967295,
                           },
                       ),
                       largest_niche: None,
                       align: AbiAndPrefAlign {
                           abi: Align(4 bytes),
                           pref: $PREF_ALIGN,
                       },
                       size: Size(8 bytes),
                   },
               ],
           },
           abi: ScalarPair(
               Initialized {
                   value: Int(
                       I32,
                       false,
                   ),
                   valid_range: 0..=1,
               },
               Initialized {
                   value: Int(
                       I32,
                       true,
                   ),
                   valid_range: 0..=4294967295,
               },
           ),
           largest_niche: Some(
               Niche {
                   offset: Size(0 bytes),
                   value: Int(
                       I32,
                       false,
                   ),
                   valid_range: 0..=1,
               },
           ),
           align: AbiAndPrefAlign {
               abi: Align(4 bytes),
               pref: $PREF_ALIGN,
           },
           size: Size(8 bytes),
       }
  --> $DIR/debug.rs:15:1
   |
LL | type Test = Result<i32, i32>;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: layout_of(i32) = Layout {
           fields: Primitive,
           variants: Single {
               index: 0,
           },
           abi: Scalar(
               Initialized {
                   value: Int(
                       I32,
                       true,
                   ),
                   valid_range: 0..=4294967295,
               },
           ),
           largest_niche: None,
           align: AbiAndPrefAlign {
               abi: Align(4 bytes),
               pref: $PREF_ALIGN,
           },
           size: Size(4 bytes),
       }
  --> $DIR/debug.rs:18:1
   |
LL | type T = impl std::fmt::Debug;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 5 previous errors

